[package]
name    = "shedder"
version = "0.0.0"
license = "MIT"
authors = ["Matthieu Le Brazidec <matthieu@lebrazidec.email>"]
edition = "2018"

[dependencies]
fnv       = "1.0"
nom       = "5.0.0-beta.2"
structopt = "0.2"

[dependencies.inkwell]
git    = "https://github.com/TheDan64/inkwell"
branch = "llvm7-0"
